<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sangii.App_activity.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Uname"
        android:layout_alignBottom="@+id/pass"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:layout_marginBottom="53dp"
        android:layout_alignRight="@+id/pass"
        android:layout_alignEnd="@+id/pass"
        android:hint="@string/username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass"
        android:hint="@string/password"
        android:layout_above="@+id/btn_login"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:id="@+id/btn_login"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/please_login_here"
        android:id="@+id/tv1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/tv2"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:autoLink="all"
        android:textColor="#0415b4"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_here"
        android:id="@+id/tv4"
        android:layout_below="@+id/tv2"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:clickable="true"
        android:autoLink="all"
        android:textColor="#0415b4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_of_attempts"
        android:id="@+id/tv3"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tv4"
        android:layout_alignStart="@+id/tv4"
        android:textColor="@color/background_floating_material_dark" />

</RelativeLayout>
